Bug 107403 - Icons wrongly scaled in hidpi screen for the borders toolbar control
Summary: Icons wrongly scaled in hidpi screen for the borders toolbar control
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.3.2.2 release
Hardware: All All
: medium minor
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:6.1.0 target:6.0.2
Keywords:
: 114535 115443 115563 (view as bug list)
Depends on:
Blocks: HiDPI Split-Group-Buttons
  Show dependency treegraph
 
Reported: 2017-04-25 00:56 UTC by christianbrooker
Modified: 2018-02-13 20:59 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot of dropdown box with incorrectly scaled icons (186.19 KB, image/png)
2017-04-25 00:57 UTC, christianbrooker
Details
Faulty BORDER tool box with recent version (248.23 KB, image/png)
2018-02-11 12:07 UTC, siggy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description christianbrooker 2017-04-25 00:56:27 UTC
Description:
I click the dropdown box for borders in the toolbar and I cannot see the border options in the drop down box when i click on the border toolbar. it's the same no matter what icon theme i use. the drop down shows up with a bunch of options to click on but i cannot see what is inside each box. it seems the icons have been wrongly scaled as there is supposed to be large white margin which is not shown. here is a link to a screenshot that demonstrates the problem: https://www.dropbox.com/s/2f55if3fimoeuxh/Screenshot%20from%202017-04-24%2021-17-02.png?dl=0

Actual Results:  
by opening libreoffice

Expected Results:
can't see border options in dropdown box in toolbar


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/57.0.2987.133 Safari/537.36
Comment 1 christianbrooker 2017-04-25 00:57:31 UTC
Created attachment 132808 [details]
screenshot of dropdown box with incorrectly scaled icons
Comment 2 Buovjaga 2017-05-27 14:15:20 UTC
Confirmed on Manjaro Linux. Scaling factor 2

Version: 5.3.3.2
Build ID: 5.3.3-1
CPU Threads: 4; OS Version: Linux 4.11; UI Render: default; VCL: kde4; Layout Engine: new; 
Locale: en-US (en_US.UTF-8); Calc: group
Comment 3 Maxim Monastirsky 2018-02-08 23:43:46 UTC
*** Bug 115563 has been marked as a duplicate of this bug. ***
Comment 4 Maxim Monastirsky 2018-02-08 23:45:58 UTC
*** Bug 114535 has been marked as a duplicate of this bug. ***
Comment 5 Maxim Monastirsky 2018-02-09 09:36:24 UTC
https://gerrit.libreoffice.org/49478/
Comment 6 Commit Notification 2018-02-10 22:08:01 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=273d0ee7b7edb24c2c9e15e9f4337f71c175801a

tdf#107403 Don't scale frame icons twice

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Maxim Monastirsky 2018-02-10 22:09:21 UTC
Backport to 6-0 in gerrit.
Comment 8 Jacques Guilleron 2018-02-11 11:36:05 UTC
*** Bug 115443 has been marked as a duplicate of this bug. ***
Comment 9 siggy 2018-02-11 12:07:48 UTC
Created attachment 139780 [details]
Faulty BORDER tool box with recent version

Action: Downloaded and installed recent fix  for tool box BORDERS

Result: No change. Fault still exists. Please see attached screenshot (17).png.
Comment 10 Buovjaga 2018-02-11 12:09:57 UTC
(In reply to siggy from comment #9)
> Created attachment 139780 [details]
> Faulty BORDER tool box with recent version
> 
> Action: Downloaded and installed recent fix  for tool box BORDERS
> 
> Result: No change. Fault still exists. Please see attached screenshot
> (17).png.

The fix is not yet in 6.0.2. Please test with a build of 6.1
Comment 11 Commit Notification 2018-02-13 20:59:22 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9cb3b0f5cbf7d35342ed2d5c5c1130f63ef050e3&h=libreoffice-6-0

tdf#107403 Don't scale frame icons twice

It will be available in 6.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.