tdf#107403 Don't scale frame icons twice

It's already done by ImplImageTree, see loadImageFromStream
function in ImplImageTree.cxx.

Change-Id: I5aa7439876037fb0168f6c1da264af9697788ef0